fix(YALB-1594): z-index fix on citation

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
@@ -104,7 +104,7 @@
     border: 1px solid #E0E0E0;
     flex: none;
     flex-grow: 0;
-    z-index: 2;
+    z-index: 0;
     font-style: normal;
     font-weight: 600;
     font-size: 1rem;
