--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/chat/Chat.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/chat/Chat.module.css
@@ -256,6 +256,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    z-index: 0;
 }
 
 .citationPanelInner {
@@ -271,6 +272,7 @@
     background: #FFFFFF;
     padding: 1rem 2rem;
     gap: 0.5rem;
+    z-index: 4;
 }
 
 .citationPanel::before {
@@ -280,7 +282,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 0;
+    z-index: 2;
     background: rgba(0, 69, 120, 0.70);
     background-blend-mode: multiply;
     backdrop-filter: blur(6.843055725097656px);
